[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "types-nameparser"
version = "0.1.0"
description = "Typing stubs for the nameparser library"
classifiers = ["Typing :: Stubs Only"]

[tool.setuptools]
packages = ["nameparser_stubs"]
package-data = {"nameparser_stubs" = ["*.pyi"]}

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "ARG", "PIE", "TCH", "Q", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["F401", "F403", "F405", "F811", "F841", "PIE790"]
